--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -129,7 +129,7 @@ body {
 }
 .header__inner-nav-bar__navs-item__link:not(.inner-nav-bar__navs-item__link--active):hover:before  {
 	display: block;
-	positon: absolute;
+	position: absolute;
 	content:'';
 	width: 100%;
 	height: 8px;
@@ -192,4 +192,141 @@ body {
 }
 .aside-block__icons_link:hover .aside-block__icons-item {
 	fill:#fce57e;
+}
+
+
+/*                             FOOTER                           */
+
+.footer {
+	flex: 0 0 auto;
+	background-color: #353535;
+	min-height: 304px;
+	color: #fff;
+}
+
+.footer__footer-wrapper {
+	width: 95%;
+	margin: 0 auto;
+}
+
+.footer__line {
+	width: 100%;
+	height: 2px;
+	background-color: #979797;
+	opacity: 0.5;
+}
+
+.footer__nav {
+	margin-top: 26px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer__nav-bar {
+	height: 72px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 9px 0;
+	padding: 0 48px;
+	background-color: #252525;
+}
+
+.footer__inner-nav-bar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 80px;
+	padding: 0 48px;
+	box-shadow: 0 13px 24px -5px rgba(0, 0, 0, 0.09);
+	background-color: #ffffff;
+}
+
+.footer__nav-bar__logo img {
+	width: 268px;
+	height: 57px;
+	object-fit: contain;
+}
+
+.footer__nav-bar__navs,
+.footer__inner-nav-bar__navs {
+	color: #fff;
+	list-style: none;
+	width: 73vw;
+	padding: 0;
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer__nav-bar__navs-item,
+.footer__inner-nav-bar__navs-item {
+	display: inline-block;
+	text-transform: uppercase;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	font-weight: bold;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: normal;
+	letter-spacing: 1px;
+	color: inherit;
+	position: relative;
+}
+
+.footer__footer-credits {
+	margin-top: 68px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+.footer__footer-credits__official-info ul,
+.footer__footer-credits__phones ul {
+	list-style: none;
+	margin: 0;
+}
+
+.footer__footer-credits__official-info ul li,
+.footer__footer-credits__phones ul li {
+	padding: 4px 0;
+}
+
+.footer__footer-credits__phones a,
+.footer__footer-credits__official-info a {
+	text-decoration: none;
+	color: #fff;
+}
+
+.footer__footer-credits__icons {
+	width: 150px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.footer__footer-credits__requisites {
+	width: 321px;
+	height: 112px;
+	opacity: 0.45;
+	font-size: 16px;
+	font-weight: normal;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.75;
+	letter-spacing: normal;
+	color: #ffffff;
+}
+
+.footer__brand {
+	width: 200px;
+	height: 28px;
+	opacity: 0.45;
+	font-size: 16px;
+	font-weight: normal;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.75;
+	letter-spacing: normal;
+	color: #ffffff;
+	margin-bottom: 37px;
 }
