--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -1478,6 +1478,8 @@ h2{
 }
 .pop-products-block__item img{
 	width: auto;
+	max-width: 152px;
+    max-height: 200px;
 	display: block;
 	margin: 0 auto;
 	position: absolute;
@@ -4902,7 +4904,7 @@ height: 25px;
 	line-height: 1.75;
 	letter-spacing: normal;
 	color: #ffffff;
-	margin-bottom: 38px;
+	/* margin-bottom: 38px; */
 }
 
 /*end of footer */
