--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -180,6 +180,9 @@ h2{
 }
 
 .header__nav-bar__login-button{
+	justify-content: center;
+    align-items: center;
+    display: flex;
 	width: 115px;
 	height: 48px;
 	border-radius: 28px;
@@ -200,8 +203,8 @@ h2{
 	letter-spacing: 1px;
 	color: #ffffff;
 	display: inline-block;
-	margin: 16px 0;
-	padding: 0 0 0 3px;
+	/* margin: 16px 0;
+	padding: 0 0 0 3px; */
 }
 .header__nav-bar__cart-block-link {
 	display: flex;
@@ -5269,7 +5272,7 @@ h2{
 	line-height: 1.75;
 	letter-spacing: normal;
 	color: #ffffff;
-	margin-bottom: 38px;
+	/* margin-bottom: 38px; */
 }
 
 /*end of footer */
