--- a/bitrix/templates/eshop_bootstrap_black/components/bitrix/sale.order.ajax/template_2/style.css
+++ b/bitrix/templates/eshop_bootstrap_black/components/bitrix/sale.order.ajax/template_2/style.css
@@ -1523,3 +1523,8 @@ label[data-bx-user-consent] a{
 label[data-bx-user-consent] input{
     margin-top: 2px;
 }
+.cart-block__cart-items-list__item:not(:last-child) {
+    border-bottom: 2px solid #e6e6e6;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
