--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -571,7 +571,7 @@ h2{
 	justify-content: space-between;
 }
 .aside-block__icons_link {
-	padding-left: 16px;
+	/* padding-left: 16px; */
 }
 .aside-block__icons_link img {
 	transform:rotate(270deg);
@@ -579,9 +579,8 @@ h2{
 .aside-block__icons-item {
 	background-size: 30%;
 	display: block;
-	width: 20px;
-	height: 20px;
-	padding: 10px;
+	width: 40px;
+	height: 40px;
 	transform: rotate(-90deg);
 	border-radius: 50%;
 	box-sizing: content-box;
