--- a/bitrix/templates/eshop_bootstrap_black/components/bitrix/catalog/catalog_test/bitrix/catalog.element/.default/style.css
+++ b/bitrix/templates/eshop_bootstrap_black/components/bitrix/catalog/catalog_test/bitrix/catalog.element/.default/style.css
@@ -3549,6 +3549,9 @@ h2{
     color: #000000;
     margin-bottom: 26px;
 }
+.product-block__description-item-more {
+    margin-bottom: 26px;
+}
 .product-block__description-more__text {
     font-size: 16px;
     font-weight: bold;
