--- a/bitrix/templates/eshop_bootstrap_black/components/bitrix/catalog/catalog_test/bitrix/catalog.element/.default/style.css
+++ b/bitrix/templates/eshop_bootstrap_black/components/bitrix/catalog/catalog_test/bitrix/catalog.element/.default/style.css
@@ -5619,3 +5619,9 @@ h2{
 .slick-list {
     overflow-y: scroll !important;
 }
+.img-block__exercise-pic {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: 435px;
+}
