--- a/bitrix/templates/eshop_bootstrap_black/components/bitrix/news.list/PromoTrainingBlock/style.css
+++ b/bitrix/templates/eshop_bootstrap_black/components/bitrix/news.list/PromoTrainingBlock/style.css
@@ -48,6 +48,7 @@
 
 .promo-train-block__slider-item {
     height: 520px;
-    background: url(/bitrix/templates/eshop_bootstrap_black/assets/ipad-02.jpg) no-repeat!important;
+	background: url(/bitrix/templates/eshop_bootstrap_black/assets/ipad-02.jpg) center;
+	background-size: contain;
     background-color: #ffd2d7;
 }
