add adaptive and trello fixes

--- a/bitrix/templates/eshop_bootstrap_black/components/bitrix/news.list/PopProductsBlock/style.css
+++ b/bitrix/templates/eshop_bootstrap_black/components/bitrix/news.list/PopProductsBlock/style.css
@@ -56,7 +56,7 @@
 	background-color: #fff;
 	position: relative;
 	margin-bottom: 30px;
-	margin-right: 6px;
+	/* margin-right: 6px; */
 }
 
 .pop-products-block__item__title {
