--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -28,7 +28,7 @@ body {
 	flex-direction: column;
 	height: 100%;
 	transition: .5s;
-
+	--webkit-text-size-adjust: none;
 }
 .page_content {
 	flex: 1 0 auto;
@@ -100,6 +100,17 @@ h2{
 .half_width {
 	width: 338px;
 }
+.button-form-grey {
+	border-radius: 28px;
+	background-color: #535353;
+	margin-left: 16px;
+	text-transform: uppercase;
+	font-size: 16px;
+	font-weight: bold;
+}
+.footer-tablet {
+	display: none;
+}
 /*index page styles*/
 .header {
 	font-family: 'Roboto', sans-serif;
@@ -123,6 +134,21 @@ h2{
 	padding: 2px 47px 0 52px;
 	box-shadow: 0 13px 24px -5px rgba(0, 0, 0, 0.09);
 	background-color: #ffffff;
+}
+button-form-grey {
+	border-radius: 28px;
+	background-color: #535353;
+	margin-left: 16px;
+	text-transform: uppercase;
+	font-size: 16px;
+	font-weight: bold;
+}
+	
+.footer-tablet {
+	display: none;
+}
+.header-mobile {
+	display: none;
 }
 .header__nav-bar__logo img {
 	width: 259px;
@@ -301,7 +327,6 @@ h2{
 	padding-top:41px;
 }
 .greetings-block {
-
 	width:325px;
 	margin: 0 auto;
 }
@@ -523,6 +548,7 @@ h2{
 	color: #000000;
 }
 .up-hello-block__left-side__title-block {
+	width: 50%;
 	margin-left: 99px;
 	position: relative;
 	bottom: 4px;
@@ -599,6 +625,7 @@ h2{
 /*up slider*/
 .up-block {
 	display: flex;
+	flex-flow: row nowrap;
 	min-height: 500px;
 }
 .up-slider-wrapper{
@@ -743,7 +770,7 @@ h2{
 }
 .img-wrapper {
 	width: 50%;
-	min-width: 710px;
+	/* min-width: 710px; */
 	/* background-image: url('/bitrix/templates/eshop_bootstrap_black/assets/img-3775.jpg'); */
 	background-size: cover;
 }
@@ -761,7 +788,7 @@ h2{
 .mixit,
 .mixit .owl-carousel__slider-item {
 	height: 200px;
-	width: 100%;
+	/* width: 100%; */
 	max-width: 1346px;
 	margin: 23px auto 99px;
 }
@@ -988,7 +1015,7 @@ h2{
 /*end of main slider */
 /*special offer */
 .grey-bg{
-	background-color: #fbfbfd;;
+	background-color: #fbfbfd;
 }
 .bootstrap-box * {
 	box-sizing: border-box;
@@ -1068,7 +1095,7 @@ h2{
 }
 .grey-bg .special-offer-block__items{
 	width: 100%;
-	max-width: 1140px;
+	/* max-width: 1140px; */
 	justify-content: space-between;
 	margin: 39px auto 97px;
 }
@@ -1097,10 +1124,10 @@ h2{
 {
 	max-width: 320px;
 }
-.bootstrap-box .special-offer-block__item img{
-	width: 320px;
+/* .bootstrap-box .special-offer-block__item img{ */
+	/* width: 320px; */
 
-}
+/* } */
 .training .special-offer-block__item {
 	justify-content: flex-start;
 }
@@ -1147,12 +1174,13 @@ h2{
 .training .special-offer-block__item__prices {
 	align-items: center;
 	margin-top: 27px;
+	position: relative;
 }
 .training-slider .special-offer-block__item__prices {
 	margin-top: 0;
 }
 .special-offer-block__item__price {
-	width: 72px;
+	width: 75px;
 	font-size: 22px;
 	font-weight: bold;
 	font-style: normal;
@@ -1591,7 +1619,7 @@ h2{
 /*end of pop products-block*/
 /*hello-block*/
 .hello-block__content {
-	margin: 78px 0 111px 0;
+	margin: 78px 0 111px;
 }
 .hello-block__content__up-items {
 	display: flex;
@@ -1629,7 +1657,7 @@ h2{
 	bottom: -2px;
 }
 .hello-block__content__desc {
-	width: 384px;
+	width: auto;
 	height: 96px;
 	font-size: 16px;
 	font-weight: normal;
@@ -1649,17 +1677,18 @@ h2{
 	margin: 0;
 
 }
-.hello-block__content__hello .hello-block__content__hello__img,
-.hello-block__content__hello .hello-block__content__hello__desc
-{
-	width: 50%;
-}
+/* .hello-block__content__hello .hello-block__content__hello__img, */
+/* .hello-block__content__hello .hello-block__content__hello__desc */
+/* { */
+	/* width: 50%; */
+/* } */
 .hello-block__content__hello .hello-block__content__hello__desc {
 	min-height: 601px;
 }
 .hello-block__content__hello__img img {
 	display: block;
 	margin: 0 auto;
+	width: 100%;
 }
 .hello-block__content__hello__desc__title {
 	margin-bottom: 49px;
@@ -1677,7 +1706,7 @@ h2{
 	color: #000000;
 }
 .hello-block__content__hello__desc__title__slogan{
-	width: 543px;
+	width: auto;
 	min-height: 26px;
 	font-size: 16px;
 	font-weight: normal;
@@ -1792,13 +1821,14 @@ h2{
 	background: url('/bitrix/templates/eshop_bootstrap_black/assets/ipad-02.jpg') no-repeat;
 	background-size: contain;
 	background-color: #ffd2d7;
+	background-size: cover;
 }
 .personal-programm.promo-train-block__slider-item{
 	height: 345px;
 	background: url('/bitrix/templates/eshop_bootstrap_black/assets/personal-programm.jpg') no-repeat;
 	background-color: #ffd2d8;
-	width: 92.5%;
-	margin: 39px auto;
+	margin: 39px 47px;
+    background-position-x: 80%!important;
 }
 .tapes.promo-train-block__slider-item {
 	background: url('/bitrix/templates/eshop_bootstrap_black/assets/slider-bg.jpg') no-repeat;
@@ -1979,7 +2009,6 @@ h2{
 }
 .blue-bg .promo-train-block__slider-item__slider-content__dicription{
 	margin-top: 26px;
-	width: 430px;
 }
 .promo-train-block__slider__content_bottom {
 	display: flex;
@@ -2221,7 +2250,6 @@ h2{
 .bottom-slider-block {
 	position:relative;
 	margin-bottom:-2px;
-	overflow: hidden;
 }
 .bottom-slider-block__slider-header {
 	height: 430px;
@@ -2343,8 +2371,8 @@ h2{
 	z-index: 999;
 	height: 549px;
 	bottom: 59px;
-	width: 100%;
-	padding: 0 30px;
+	width: calc(100% - 47px);
+    margin-left: 47px;
 	align-items: center;
 }
 .before-after .bottom-slider-block__slider-wrapper  {
@@ -2577,7 +2605,9 @@ h2{
 /*end of FAQ block*/
 /*exercises-promo-block*/
 .exercises-promo-block_row {
+	margin: 0;
 	display: flex;
+	justify-content: center;
 }
 .exercises-promo-block * {
 	box-sizing: border-box;
@@ -2591,7 +2621,7 @@ h2{
 	background-color: #f7f7fb;
 }
 .exercises-promo-block__left-side {
-	padding: 89px 0 0 160px !important;
+	padding: 89px 0 0 ;
 
 }
 .exercises-promo-block__left-side__title {
@@ -2702,6 +2732,7 @@ h2{
 .exercises-list-block {
 	margin-top: 73px;
 	margin-bottom: 48px;
+	padding: 0 16px;
 }
 .exercises-list-block__item {
 	padding: 0 115px;
@@ -2761,6 +2792,7 @@ h2{
 .big-block.ceo-text-block {
 	min-height: 715px;
 	margin-top: 141px;
+	padding: 0 32px;
 }
 .white-bg {
 	background-color: #fff;
@@ -2768,7 +2800,7 @@ h2{
 .ceo-text-block__content {
 	width: 100%;
 	max-width: 780px;
-	padding: 87px 0 0 0;
+	padding: 87px 0 0 ;
 	margin: 0 auto;
 }
 .ceo-text-block__title {
@@ -2927,6 +2959,7 @@ h2{
 .delivery-block__content img {
 	display: block;
 	margin: 46px auto 0;
+	width: 100%;
 }
 /*end of delivery-block*/
 /*difference-block*/
@@ -2959,11 +2992,15 @@ h2{
 	display: flex;
 	justify-content: space-between;
 }
+.difference-block__item img {
+    max-width: 280px;
+    width: 100%;
+}
 /*end of difference-block*/
 /*exercises-tabs-block*/
 .exercises-tabs-block,
 .product_catalog_block{
-	width: 100%;
+	/* width: 100%; */
 	max-width: 1346px;
 	margin:0 auto;
 }
@@ -2982,7 +3019,7 @@ h2{
 	justify-content: space-between;
 	margin-top: 28px;
 	margin-bottom: 110px;
-
+	flex-flow: row wrap;
 }
 .exercises-tabs-block__tabs__item {
 	width: 205px;
@@ -3025,6 +3062,7 @@ h2{
 	max-width:1120px;
 	margin:0 auto 37px;
 	display: flex;
+	justify-content: center;
 }
 
 .exercise-demos-list-block__right-side{
@@ -3194,14 +3232,18 @@ h2{
 .product-block {
 	display: flex;
 	justify-content: space-between;
-	width: 80%;
+	width: 95%;
 	max-width: 1440px;
 	margin: 0 auto;
 	/* margin: 0 99px 0 44px; */
 }
 .discount.product-block {
-	justify-content: flex-start;
+	justify-content: center;
+	/* justify-content: flex-start; */
 	margin: 0 65px 0 44px;
+}
+.discount.product-block .slider-product-view img{
+    width: auto;
 }
 .product-block__product-slider {
 	display: flex;
@@ -3212,7 +3254,6 @@ h2{
 	padding-left: 70px;
 }
 .discount .product-block__description {
-	width: 100%;
 	max-width: 842px;
 }
 .slider-nav-block {
@@ -3657,11 +3698,11 @@ h2{
 	background-color: #e1fa61;
 	color: #000;
 }
-.catalog_block .pop-products-block__item {
+.catalog_block .pop-products-block__item:not(:last-child) {
 	border: solid 1px #e5e5e5;
 }
 .catalog_block .pop-products-block__items {
-	width: 900px;
+	max-width: 900px;
 	margin-bottom: 20px;
 	margin-top: 0;
 }
@@ -3745,14 +3786,14 @@ h2{
 /*text-block*/
 #text-block {
 	margin-left: 274px;
-	width: 770px;
+	max-width: 770px;
 	margin-bottom: 63px;
 }
 .center-block {
 	margin: 0 auto 63px!important;
 }
 #text-block .img-container {
-	width: 890px;
+	max-width: 890px;
 	height:550px;
 	margin-top: 50px;
 	margin-bottom:92px ;
@@ -3781,8 +3822,9 @@ h2{
 }
 #public-offer_text-block,
 #center-block_text-block {
-	width: 891px;
+	max-width: 891px;
 	margin: 0 auto 80px;
+	padding: 0 16px
 }
 #public-offer_text-block h2 {
 	display: inline-block
@@ -3880,7 +3922,7 @@ h2{
 /*shipping-logos-block*/
 .bottom-text-block {
 	margin-left: 274px;
-	width: 665px;
+	max-width: 770px;
 	margin-bottom:172px;
 	font-size: 16px;
 	font-weight: normal;
@@ -3888,6 +3930,7 @@ h2{
 	font-stretch: normal;
 	line-height: 1.63;
 	letter-spacing: normal;
+	padding: 0 16px;
 }
 
 .divide-line {
@@ -4507,7 +4550,7 @@ h2{
 	z-index: 99999999999;
 	top:50%;
 	left: 50%;
-	width:100%;
+	width:90%;
 	min-height:100%;
 
 }
@@ -4646,9 +4689,10 @@ h2{
 .wholesale.in-the-know-form-block {
 	background: url('/bitrix/templates/eshop_bootstrap_black/assets/wholesale-form.svg') no-repeat;
 	background-size:cover;
+	width: 100%;
 }
 .wholesale .in-the-know-form-block__title {
-	min-width: 829px;
+	/* min-width: 829px; */
 	font-size: 32px;
 	font-weight: normal;
 	font-style: normal;
@@ -4658,7 +4702,7 @@ h2{
 	text-align: center;
 }
 .wholesale .in-the-know-form-block__desc {
-	min-width: 829px;
+	/* min-width: 829px; */
 	font-size: 16px;
 	font-weight: normal;
 	font-style: normal;
@@ -4691,11 +4735,12 @@ h2{
 	width: auto;
 }
 .big-width-block.center-block {
-	width: 890px;
+	max-width: 890px;
+    padding: 0 16px;
 }
 .wholesale .img-container,
 .big-width-block .img-container {
-	width: 890px;
+	max-width: 890px;
 	min-height: 550px;
 	margin-top: 50px;
 	margin-bottom: 96px;
@@ -4808,9 +4853,9 @@ h2{
 	color: #000000;
 	background-color: #e1fa61;
 }
-.big-width-block .img-container {
-	margin-top: 0;
-}
+/* .big-width-block .img-container { */
+	/* margin-top: 0; */
+/* } */
 /*end-of map-block*/
 /*contacts-text-block*/
 .contacts h2 {
@@ -5173,7 +5218,7 @@ h2{
 	padding-top:26px;
 }
 .footer__footer-wrapper{
-	width: 1331px;
+	max-width: 1331px;
 	margin: 0 auto;
 }
 .footer__line {
@@ -5256,7 +5301,7 @@ h2{
 	align-items: flex-start;
 }
 .footer__footer-credits__official-info {
-	margin-left: 132px;
+	margin-left: 172px;
 }
 .footer__footer-credits__official-info a:hover {
 	color:#52d5ff;
@@ -5268,6 +5313,7 @@ h2{
 .footer__footer-credits__phones ul{
 	list-style: none;
 	margin: 0;
+	padding: 0;
 }
 .footer__footer-credits__official-info ul li,
 .footer__footer-credits__phones ul li{
@@ -5333,4 +5379,8 @@ div#basket-items-list-container {
 .exercise-demos-list-block__left-side__img-block img, .exercise-demos-list-block__left-side__img-block, .exercise-demos-list-block__left-side{
 	max-width: 270px;
 	max-height: 270px;
+}
+.mobile,
+.tablet {
+    display: none;
 }
