--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -868,7 +868,7 @@ button-form-grey {
     letter-spacing: 1px;
     text-align: center;
     color: #000000;
-    margin: 24px 0;
+    padding: 24px 0;
     display: inline-block;
 }
 
@@ -1027,7 +1027,7 @@ button-form-grey {
 
 .owl-carousel__slider-item-button {
     border-radius: 32px;
-    width: 171px;
+    /* width: 171px; */
     height: 64px;
     background-color: #e7ff6a;
     text-align: center;
@@ -1042,7 +1042,7 @@ button-form-grey {
     line-height: normal;
     letter-spacing: 0.9px;
     text-align: center;
-    margin: 24px 0;
+    padding: 24px 50px;
     display: inline-block;
     color: #000000;
 }
@@ -2345,7 +2345,7 @@ button-form-grey {
 
 .promo-train-block__slider-item-button {
     border-radius: 32px;
-    width: 184px;
+    /* width: 184px; */
     height: 64px;
     background-color: #e7ff6a;
     text-align: center;
@@ -2353,7 +2353,7 @@ button-form-grey {
 
 .personal-programm .promo-train-block__slider-item-button {
     border-radius: 32px;
-    width: 167px;
+    /* width: 167px; */
     height: 64px;
     background-color: #e7ff6a;
     text-align: center;
@@ -2361,7 +2361,7 @@ button-form-grey {
 
 .tapes .promo-train-block__slider-item-button {
     border-radius: 32px;
-    width: 176px;
+    /* width: 176px; */
     height: 64px;
     background-color: #e7ff6a;
     text-align: center;
@@ -2377,7 +2377,7 @@ button-form-grey {
     letter-spacing: 0.9px;
     text-align: center;
     color: #000000;
-    margin: 25px 0;
+    padding: 25px 50px;
     display: inline-block;
 }
 
