--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -5475,12 +5475,39 @@ button-form-grey {
     background-color: #ffffff;
 }
 
+#faq .wrapper-block {
+    max-height: none;
+}
+
+#faq.popUp {
+    top: 0;
+    left: 0;
+    width: 101%;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+#faq.popUp .wrapper-block {
+    top: 0;
+    left: 50%;
+    width: 100%;
+    max-width: 1346px;
+    min-height: 604px;
+    background-color: #ffffff;
+    margin: 40px auto;
+    transform: none;
+}
+
 .accordion {
     width: 100%;
     max-width: 1120px;
     margin: 0 auto;
     padding: 113px 0 128px 0;
     border-collapse: collapse;
+}
+
+#FAQaccordion .card-header h2 {
+    max-width: 1024px;
 }
 
 .accordion>.card:not(:last-of-type) {
