previews in list section exercersises

--- a/bitrix/templates/eshop_bootstrap_black/components/bitrix/catalog/catalog_test/bitrix/catalog.element/.default/style.css
+++ b/bitrix/templates/eshop_bootstrap_black/components/bitrix/catalog/catalog_test/bitrix/catalog.element/.default/style.css
@@ -5199,6 +5199,7 @@ h2{
     height: 259px;
     background-color: #ffffff;
     padding: 40px 0 0 40px;
+    box-sizing: border-box;
 }
 .personal-cabinet__navbar{
     padding: 0;
