--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -5279,7 +5279,8 @@ button-form-grey {
 }
 
 .text-input input {
-    padding: 19px 16px;
+    padding: 22px 16px 16px;
+    font-size: 16px;
     width: 306px;
 }
 
@@ -5291,7 +5292,7 @@ button-form-grey {
 .text-input select {
     padding: 18px 16px;
     width: 340px;
-    webkit-appearance: none;
+    -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     border: solid 1px #d9d9d9;
