finish ajax cart

--- a/bitrix/templates/eshop_bootstrap_black/components/bitrix/sale.order.ajax/template_2/style.css
+++ b/bitrix/templates/eshop_bootstrap_black/components/bitrix/sale.order.ajax/template_2/style.css
@@ -1528,3 +1528,9 @@ label[data-bx-user-consent] input{
     margin-bottom: 20px;
     padding-bottom: 20px;
 }
+
+
+
+.page_content {
+    background-color: #f8f8f8;
+}
