--- a/bitrix/templates/eshop_bootstrap_black/mobile.css
+++ b/bitrix/templates/eshop_bootstrap_black/mobile.css
@@ -141,6 +141,9 @@
                                 .exercises-list-block__item {
                                     padding: 0 80px;
                                 }
+                                .trainings_category_block-item {
+                                    width: 307px;
+                                }
                             }
                             
                             @media(max-width:1280px) {
@@ -189,12 +192,18 @@
                                 .bootstrap-box.special-offer-block {
                                     margin: 76px 112px 105px;
                                 }
+                                .trainings_category_block-item {
+                                    width: 280px;
+                                }
                             }
                             
                             @media(max-width: 1147px) {
                                 .exercises-tabs-block__tabs {
                                     padding: 0 161px;
                                     justify-content: center;
+                                }
+                                .trainings_category_block-item {
+                                    width: 256px;
                                 }
                             }
                             
@@ -764,7 +773,14 @@
                                 .bootstrap-box .special-offer-block__item {
                                     width: 209px;
                                 }
+                            
+                            .trainings_category_block-item {
+                                width: 47%;
                             }
+                            .trainings_category_block .special-offer--block__item-cart {
+                                display: block;
+                            }
+                        }
                             
                             @media(max-width:768px) {
                                 .hello-block__content__hello div {
@@ -917,5 +933,8 @@
                                 }
                                 #FAQaccordion .card-header h2 {
                                     max-width: 600px;
+                                }
+                                .trainings_category_block-item {
+                                    width: 96%;
                                 }
                             }
