--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -4527,10 +4527,12 @@ button-form-grey {
 }
 
 .trainings_category_block-item {
-  min-width: 637px;
-  min-height: 240px;
-  margin: 35px;
-  width: 45%;
+  min-height: 353px;
+  margin: 7px;
+  width: 320px;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
 }
 
 .trainings_category_block-item__title {
@@ -4543,11 +4545,12 @@ button-form-grey {
   letter-spacing: normal;
   color: #000000;
   width: 180px;
-  margin: 40px 0 0 300px;
+  margin: 40px auto;
+  text-align: center;
 }
 
 .trainings_category_block .special-offer--block__item-cart {
-  margin: 34px 0 0 300px;
+  margin: 34px auto;
 }
 
 
@@ -5159,8 +5162,9 @@ button-form-grey {
   background-color: #ffffff;
   padding: 39px 33px 50px 50px;
 }
+
 .cart-block__cart-review.cart-main {
-    max-height: none;
+  max-height: none;
 }
 
 .cart-block__cart-review__cart-items-counter-block,
@@ -6316,10 +6320,11 @@ button-form-grey {
   background-color: #979797;
   opacity: 0.5;
 }
+
 .cart-block__cart-review .footer__line {
-    width: 100%;
-    margin: 48px auto 29px;
-  }
+  width: 100%;
+  margin: 48px auto 29px;
+}
 
 .footer__nav {
   margin-top: 24px;
