add promo to cart

--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -1673,6 +1673,7 @@ button-form-grey {
   border: solid 1px;
   padding: 0 23px;
   border: solid 1px #d9d9d9;
+  font-size: 15px;
 }
 
 .promocode-block {
